samples/_failures_safe/1761480582_3e219e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5046a442.c: In function ‘main’:
./samples/SAFE/__tmp_5046a442.c:157:17: error: expected expression at end of input
  157 |                 mat2.cols =
      |                 ^~~~
./samples/SAFE/__tmp_5046a442.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5046a442.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5046a442.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5046a442.c:157:17: error: expected declaration or statement at end of input
